Fix image stretching in layout

--- a/styles.css
+++ b/styles.css
@@ -40,6 +40,7 @@ body {
 img {
   display: block;
   max-width: 100%;
+  height: auto;
 }
 
 a {
@@ -417,6 +418,8 @@ dd {
 }
 
 .artwork-image {
+  width: 100%;
+  height: auto;
   border-radius: calc(var(--radius) - 6px);
 }
 
